# flash512-vanguard

./: .gitignore  CHANGELOG.md  COMMERCIAL.md  MANIFEST.in  README.md  SECURITY.md  conftest.py  pyproject.toml  run_tests.sh
.github/workflows/: tests.yml
flash512/: __init__.py  engine.py  secure_memory.py
flash512/compat/: legacy_wrapper.py
flash512/core/: aes_engine.py  key_manager.py
menv/: pyvenv.cfg
menv/Scripts/: activate  activate.bat
tests/: test_backward_compatibility.py  test_flash512_vanguard.py  test_military_grade.py  test_property.py  test_security_guarantees.py  test_security_properties.py
